--- a/ApplicationCore/templates/index.html
+++ b/ApplicationCore/templates/index.html
@@ -1,8 +1,8 @@
-{% block title %}New Classification Testing Page{% endblock %}
+{% block title %}Emotional Machines{% endblock %}
 
 {% block content %}
 
 <div class="container">
-    <h1 class="mb-4">New Classification Testing Page</h1>
+    <h1 class="mb-4">Emotional Machines</h1>
 
 {% endblock %}
